[package]
name = "world_hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
num = "0.4.0"
thiserror = "1.0"
# 异步编程依赖
futures = "0.3"
async-std = { version = "1.6", features = ["attributes"] }
# cache bin 依赖
mini-redis = "0.4"
tokio = { version = "1", features = ["full"] }
# 引入自定义 macro
hello_macro_derive = { path = "./hello_macro_derive" }

[dev-dependencies]
pretty_assertions = "1"
